# CHIP-8-Emulator

./: .gitignore  CHIP8.sln  CHIP8.vcxproj  CHIP8.vcxproj.filters  CMakeLists.txt  RCa19768  README.md  chip8.cpp  inputhandler.h  main.cpp  renderer.cpp  renderer.h  utility.h
include/: audioplayer.h  badopcodeexception.h  chip8.h  colour.h  displaysettings.h  emulator.h  enumarray.h  frameinfo.h  frametimer.h  imguiRenderer.h  imguirenderer.h  inputhandler.h  renderer.h  rendererinitexception.h  settings.h  statemanager.h  utility.h
include/exceptions/: badopcodeexception.h  chipoobmemoryaccessexception.h  chipstackerrorexception.h  fileinputexception.h  sdlinitexception.h
include/types/: colour.h  displaysettings.h  enumarray.h  frameinfo.h  rgba.h
include/utils/: frametimer.h
src/: audioplayer.cpp  audioplayer.h  chip8.cpp  chip8.h  colour.h  emulator.cpp  frametimer.cpp  imguiRenderer.cpp  imguirenderer.cpp  inputhandler.cpp  inputhandler.h  main.cpp  renderer.cpp  renderer.h  settings.h  statemanager.cpp  statemanager.h  utility.h
